fix: fix layout on mobile device

--- a/src/Components/Cards.css
+++ b/src/Components/Cards.css
@@ -5,23 +5,32 @@
   max-width: 1640px;
   width: 100%;
   margin: 0 auto;
-  height: 100vh;
+  min-height: 100vh;
 }
-h2{
-  text-align:center;
+
+h2 {
+  text-align: center;
   margin-top: 90px;
 }
+
 .flip-boxes {
-  display:flex;
+  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  flex-shrink: 1;
   justify-content: center;
-  margin-top: 4rem;
+  margin-bottom: 0;
 }
-.flip-box-inner img{
+
+@media (max-width: 700px) {
+  .flip-boxes {
+    margin-bottom: 30px;
+  }
+}
+
+.flip-box-inner img {
   border-radius: 20px;
 }
+
 /* The flip box container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-box {
   background-color: transparent;
@@ -48,7 +57,8 @@ h2{
 }
 
 /* Position the front and back side */
-.flip-box-front, .flip-box-back {
+.flip-box-front,
+.flip-box-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -64,10 +74,7 @@ h2{
 
 /* Style the back side */
 .flip-box-back {
-  background-color:#fff;
+  background-color: #fff;
   color: #000;
   transform: rotateY(180deg);
 }
-
-
-
